# mibpf-compilation-toolkit

./: '  .env  .env-nucleo  .env-nucleo-wifi  .gitignore  Cargo.toml  README.md  benchmark.c  checkpoint  suit.tmp
common/: Cargo.toml
common/src/: enumerations.rs  lib.rs  requests.rs
elf-utils/: Cargo.toml
elf-utils/src/: common.rs  extended_relocations.rs  lib.rs  relocation_resolution.rs
example-programs/: fletcher32.c  fletcher32_bench.c
macros/src/: lib.rs
scripts/: adjust-bytecode.sh  compile-bpf.sh  compile.sh
src/: args.rs  compile.rs  deploy.rs  execute.rs  internal_representation.rs  lib.rs  main.rs  postprocessing.rs  pull.rs  relocate.rs  sign.rs
tests/: benchmark.rs  function_relocation_metadata_tests.rs  integration_tests.rs  only_text_section_tests.rs  raw_elf_file_tests.rs
tests/common/: mod.rs
tests/test-sources/: bpf_fetch.c  bpf_fmt_s16_dfp.c  (+11 more)
tools/: .env  .env-nucleo  .env-nucleo-wifi  Cargo.toml
tools/src/: args.rs  deploy.rs  environment.rs  execute.rs  lib.rs  main.rs  postprocessing.rs  pull.rs  sign.rs
tools/tests/: benchmark.rs  femtocontainers_header_tests.rs  function_relocation_metadata_tests.rs  jit_tests.rs  only_text_section_tests.rs  raw_elf_file_tests.rs
tools/tests/common/: mod.rs
tools/tests/test-sources/: bpf_fetch_only_text.c  data_relocations-looping.c  gcoap_response_format.c  helpers.h  jit_asr-immediate.c  jit_asr-reg.c  jit_basic-multiply.c  jit_fletcher16_checksum_1280B_data.c  jit_fletcher16_checksum_160B_data.c  jit_fletcher16_checksum_320B_data.c  jit_fletcher16_checksum_640B_data.c  jit_fletcher16_checksum_80B_data.c  jit_fletcher32_checksum.c  jit_for-loop.c  jit_helper-call.c  jit_jump-sgt.c  jit_lsl-immediate.c  jit_lsl-reg.c  jit_lsr-reg.c  jit_rodata.c  jit_subtract-immediate.c  jit_temperature-read.c  jit_while-loop.c  looping.c  printf.c  printf_only_text.c  sensor-processing.c  shared.h
