[package]
name = "mibpf-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
coap = "0.14.3"
coap-lite = "0.11.4"
elf = "0.0.10"
rbpf = "0.2.0"
tokio = "1.36.0"

