[package]
name = "mibpf-elf-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
goblin = {version = "0.8.0", default_features = false , features = ["elf32", "elf64", "endian_fd"]}
mibpf-common = { path = "../common" }
rbpf = { path = "../../rbpf-for-microcontrollers", default-features = false }


