[package]
name = "mibpf-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
num = { version = "0.4.2", default-features = false}
coap = "0.14.3"
coap-lite = "0.11.4"
elf = "0.0.10"
rbpf = "0.2.0"
goblin = "0.8.0"

tokio = "1.36.0"
serde = { version = "1.0" }
serde_json = "1.0.113"
log = "0.4.21"
env_logger = "0.11.3"
mibpf-common = { path = "../common"}
mibpf-elf-utils = { path = "../elf-utils"}
dotenv = "0.15.0"
enum-iterator = "2.0.0"



